--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/体操部hp.jpg" alt="..." />
+                                    <a href="http://titgym.web.fc2.com/top/top.html"><img class="img-fluid rounded mb-5" src="assets/img/portfolio/体操部hp.jpg" alt="..." /></a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">東京工業大学体操部のホームページです。</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
