--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/designcomp.jpg" alt="..." />
+                                    <a href="aono.html"><img class="img-fluid rounded mb-5" src="assets/img/portfolio/designcomp.jpg" alt="..." /></a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">模写の1つです。</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
