--- a/index.html
+++ b/index.html
@@ -85,16 +85,18 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
-<!--                    
+              
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal3">
+<!--                            
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="..." />
+-->
+                            <img class="img-fluid" src="assets/img/portfolio/titechmap.jpg" alt="..." />
                         </div>
                     </div>
--->
+
                     <!-- Portfolio Item 4-->
                     <!--
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
@@ -352,7 +354,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">共同開発webアプリ</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -362,7 +364,12 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">共同開発webアプリ。アプリの一部でチームメンバーの個人サーバーのファイルを使用していたが、個人的な理由でそのファイルを削除したため、マップ上でピンがうまく機能しなくなっている。</p>
+                                    <p>コンセプトは大学の地図アプリを作って学生や教員、訪問者がスムーズに大学内を移動できるようにすることである。</p>
+                                    <p>・機能</p>
+                                    <p>予測変換で講義室検索（改善の余地あり）</p>
+                                    <p>検索した講義室を地図上でピンを置くことでその場所がわかる</p>
+                                    <p>講義室をクリックすると詳細情報が出てくる。（実装してあるのは本館、図書館、滝プラザという建物の3つのみ）</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
