--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
 -->
-                            <a href="https://advanced-bubble-titechmaps.bubbleapps.io/version-test/final?debug_mode=true"><img class="img-fluid" src="assets/img/portfolio/titechmap.jpg" alt="..." /></a>
+                            <img class="img-fluid" src="assets/img/portfolio/titechmap.jpg" alt="..." />
                         </div>
                     </div>
 
@@ -362,7 +362,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/titechmap.jpg" alt="..." />
+                                    <a href="https://advanced-bubble-titechmaps.bubbleapps.io/version-test/final?debug_mode=true"><img class="img-fluid rounded mb-5" src="assets/img/portfolio/titechmap.jpg" alt="..." /></a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">共同開発webアプリ。アプリの一部でチームメンバーの個人サーバーのファイルを使用していたが、個人的な理由でそのファイルを削除したため、マップ上でピンがうまく機能しなくなっている。</p>
                                     <p>コンセプトは大学の地図アプリを作って学生や教員、訪問者がスムーズに大学内を移動できるようにすることである。</p>
